Quick fix for overflowing images on safari

--- a/content/assets/common.css
+++ b/content/assets/common.css
@@ -208,9 +208,10 @@ pre[class*="language-"] {
 }
 
 .entries > li, .home-tiles > li {
-	margin: 0;
+  margin: 0;
   display: grid;
   grid-template-rows: min-content min-content 1fr min-content;
+  overflow: hidden;
 }
 
 .home-tiles > li {
